# SDL-Cmake-template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.circleci/: config.yml
src/: main.cpp
